2021-08-16  Alex Christensen  <achristensen@webkit.org>

        Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true
        https://bugs.webkit.org/show_bug.cgi?id=229167

        Reviewed by Chris Dumez.

        * web-platform-tests/resource-timing/buffer-full-add-then-clear-expected.txt:
        * web-platform-tests/resource-timing/buffer-full-store-and-clear-during-callback-expected.txt:
        * web-platform-tests/resource-timing/buffer-full-then-increased-expected.txt:
        * web-platform-tests/resource-timing/buffer-full-when-populate-entries-expected.txt:
        * web-platform-tests/resource-timing/resource_TAO_cross_origin_redirect_chain-expected.txt:

2021-08-16  Alex Christensen  <achristensen@webkit.org>

        Resource Timing: Duration is 0 in many cases
        https://bugs.webkit.org/show_bug.cgi?id=225737

        Reviewed by Chris Dumez.

        * web-platform-tests/resource-timing/cors-preflight.any-expected.txt:
        * web-platform-tests/resource-timing/crossorigin-sandwich-no-TAO.sub-expected.txt:
        * web-platform-tests/resource-timing/crossorigin-sandwich-partial-TAO.sub-expected.txt:
        * web-platform-tests/resource-timing/resource_timing_cross_origin_redirect_chain-expected.txt:
        * web-platform-tests/resource-timing/status-codes-create-entry-expected.txt:

2021-08-16  Brent Fulgham  <bfulgham@apple.com>

        REGRESSION (r281012): WebInspector console no longer shows script integrity information
        https://bugs.webkit.org/show_bug.cgi?id=229097
        <rdar://problem/81915909>

        Reviewed by Youenn Fablet.

        * web-platform-tests/html/semantics/scripting-1/the-script-element/module/integrity-expected.txt:

2021-08-13  Chris Dumez  <cdumez@apple.com>

        Add Cross-Origin-Embedder-Policy support for Blob URLs
        https://bugs.webkit.org/show_bug.cgi?id=229041

        Reviewed by Alex Christensen.
