@@ -1,3 +1,15 @@
+2021-08-16  Devin Rousso  <drousso@apple.com>
+
+        Web Share CanShare() should be called after transient activation check
+        https://bugs.webkit.org/show_bug.cgi?id=229132
+
+        Reviewed by Tim Horton.
+
+        Test: web-platform-tests/web-share/share-consume-activation.https.html
+
+        * page/Navigator.cpp:
+        (WebCore::Navigator::share):
+
 2021-08-16  Alex Christensen  <achristensen@webkit.org>
 
         Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true
