@@ -1,3 +1,12 @@
+2021-08-16  Devin Rousso  <drousso@apple.com>
+
+        Web Share CanShare() should be called after transient activation check
+        https://bugs.webkit.org/show_bug.cgi?id=229132
+
+        Reviewed by Tim Horton.
+
+        * web-platform-tests/web-share/share-consume-activation.https-expected.txt:
+
 2021-08-16  Alex Christensen  <achristensen@webkit.org>
 
         Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true
